--- a/mylibrary/build.gradle
+++ b/mylibrary/build.gradle
@@ -24,15 +24,22 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-    implementation 'androidx.appcompat:appcompat:1.1.0'
-    testImplementation 'junit:junit:4.13'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    api fileTree(dir: 'libs', include: ['*.jar'])
     //请求类
     api 'com.squareup.okhttp3:okhttp:4.7.2'
     //json数据处理类
     implementation 'com.google.code.gson:gson:2.8.6'
-
+    // Retrofit库
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    //日志拦截器
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.6.0'
+    //添加retrofit gson转换会自动下载gson
+    implementation 'com.squareup.retrofit2:converter-gson:2.2.0'
+    //RxJava依赖
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    //RxJava2 Adapter
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 }
